; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/extr_clk-si5341.c_si5341_initialize_pll.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/extr_clk-si5341.c_si5341_initialize_pll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_si5341 = type { i32, i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.device_node* }
%struct.device_node = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"silabs,pll-m-num\00", align 1
@.str.1 = private unnamed_addr constant [45 x i8] c"PLL configuration requires silabs,pll-m-num\0A\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"silabs,pll-m-den\00", align 1
@.str.3 = private unnamed_addr constant [45 x i8] c"PLL configuration requires silabs,pll-m-den\0A\00", align 1
@.str.4 = private unnamed_addr constant [41 x i8] c"PLL configuration invalid, assume 14GHz\0A\00", align 1
@SI5341_PLL_M_NUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk_si5341*)* @si5341_initialize_pll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @si5341_initialize_pll(%struct.clk_si5341* %0) #0 {
  %2 = alloca %struct.clk_si5341*, align 8
  %3 = alloca %struct.device_node*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.clk_si5341* %0, %struct.clk_si5341** %2, align 8
  %6 = load %struct.clk_si5341*, %struct.clk_si5341** %2, align 8
  %7 = getelementptr inbounds %struct.clk_si5341, %struct.clk_si5341* %6, i32 0, i32 2
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.device_node*, %struct.device_node** %10, align 8
  store %struct.device_node* %11, %struct.device_node** %3, align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %12 = load %struct.device_node*, %struct.device_node** %3, align 8
  %13 = call i64 @of_property_read_u32(%struct.device_node* %12, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32* %4)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %1
  %16 = load %struct.clk_si5341*, %struct.clk_si5341** %2, align 8
  %17 = getelementptr inbounds %struct.clk_si5341, %struct.clk_si5341* %16, i32 0, i32 2
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = call i32 @dev_err(%struct.TYPE_4__* %19, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0))
  br label %21

21:                                               ; preds = %15, %1
  %22 = load %struct.device_node*, %struct.device_node** %3, align 8
  %23 = call i64 @of_property_read_u32(%struct.device_node* %22, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i32* %5)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %21
  %26 = load %struct.clk_si5341*, %struct.clk_si5341** %2, align 8
  %27 = getelementptr inbounds %struct.clk_si5341, %struct.clk_si5341* %26, i32 0, i32 2
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = call i32 @dev_err(%struct.TYPE_4__* %29, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.3, i64 0, i64 0))
  br label %31

31:                                               ; preds = %25, %21
  %32 = load i32, i32* %4, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %31
  %35 = load i32, i32* %5, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %48, label %37

37:                                               ; preds = %34, %31
  %38 = load %struct.clk_si5341*, %struct.clk_si5341** %2, align 8
  %39 = getelementptr inbounds %struct.clk_si5341, %struct.clk_si5341* %38, i32 0, i32 2
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = call i32 @dev_err(%struct.TYPE_4__* %41, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.4, i64 0, i64 0))
  %43 = load %struct.clk_si5341*, %struct.clk_si5341** %2, align 8
  %44 = getelementptr inbounds %struct.clk_si5341, %struct.clk_si5341* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @clk_get_rate(i32 %45)
  %47 = sdiv i32 %46, 10
  store i32 %47, i32* %5, align 4
  store i32 1400000000, i32* %4, align 4
  br label %48

48:                                               ; preds = %37, %34
  %49 = load %struct.clk_si5341*, %struct.clk_si5341** %2, align 8
  %50 = getelementptr inbounds %struct.clk_si5341, %struct.clk_si5341* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = load i32, i32* @SI5341_PLL_M_NUM, align 4
  %53 = load i32, i32* %4, align 4
  %54 = load i32, i32* %5, align 4
  %55 = call i32 @si5341_encode_44_32(i32 %51, i32 %52, i32 %53, i32 %54)
  ret i32 %55
}

declare dso_local i64 @of_property_read_u32(%struct.device_node*, i8*, i32*) #1

declare dso_local i32 @dev_err(%struct.TYPE_4__*, i8*) #1

declare dso_local i32 @clk_get_rate(i32) #1

declare dso_local i32 @si5341_encode_44_32(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
